# crate-checker

./: Cargo.toml  README.md
.github/workflows/: sbom-source-local.yml
examples/: basic_usage.rs  batch_processing.rs  custom_client.rs
src/: cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  server.rs  types.rs  utils.rs
tests/: cli_integration_tests.rs  client_integration_tests.rs  config_integration_tests.rs  e2e_integration_tests.rs  server_integration_tests.rs
